css/buttons.dataTables.scss
@use "sass:color";
@use 'mixins.scss';
@use 'common.scss';

:root {
	--dtb-button_background: rgba(0, 0, 0, 0.05);
	--dtb-button_border: 1px solid rgba(0, 0, 0, 0.3);
	--dtb-button_border-radius: 3px;
	--dtb-button_box-shadow: none;
	--dtb-button_color: inherit;

	--dtb-button_background-hover: rgba(0, 0, 0, 0.1);
	--dtb-button_border-hover: 1px solid rgba(0, 0, 0, 0.5);
	--dtb-button_border-radius-hover: var(--dtb-button_border-radius);
	--dtb-button_box-shadow-hover: none;
	--dtb-button_color-hover: var(--dtb-button_border-radius);

	--dtb-button_background-active: rgba(178.5, 178.5, 178.5, 0.1);
	--dtb-button_border-active: var(--dtb-button_border);
	--dtb-button_border-radius-active: var(--dtb-button_border-radius);
	--dtb-button_box-shadow-active: inset 1px 1px 3px #999999;
	--dtb-button_color-active: var(--dtb-button_border-radius);

	--dtb-button_background-active-hover: rgba(127.5, 127.5, 127.5, 0.1);
	--dtb-button_border-active-hover: var(--dtb-button_border);
	--dtb-button_border-radius-active-hover: var(--dtb-button_border-radius);
	--dtb-button_box-shadow-active-hover: inset 1px 1px 3px #999999;
	--dtb-button_color-active-hover: var(--dtb-button_border-radius);

	--dtb-collection_border: 1px solid rgba( 0, 0, 0, 0.4 );
	--dtb-collection_background-color: white;
	--dtb-collection_box-shadow: 3px 4px 10px 1px rgba(0, 0, 0, 0.3);

	&.dark {
		--dtb-button_background: rgba(255, 255, 255, 0.05);
		--dtb-button_border: 1px solid rgb(255, 255, 255, 0.2);

		--dtb-button_background-hover: rgba(0, 0, 0, 0.1);
		--dtb-button_border-hover: 1px solid rgba(255, 255, 255, 0.3);

		--dtb-button_background-active: rgba(255, 255, 255, 0.1);
		--dtb-button_border-active: var(--dtb-button_border);
		--dtb-button_box-shadow-active: inset 0 0 3px #111;

		--dtb-button_background-active-hover: rgba(255, 255, 255, 0.2);
		--dtb-button_border-active-hover: var(--dtb-button_border);
		--dtb-button_box-shadow-active-hover: inset 0 0 3px #111;

		--dtb-collection_border: 1px solid rgba(255, 255, 255, 0.15);
		--dtb-collection_background-color: rgb(33, 37, 41);
		--dtb-collection_box-shadow: 3px 4px 10px 1px rgba(0, 0, 0, 0.8);

		--dtb-processing_border: 2px solid rgb(224, 224, 224);
		--dtb-processing_filter: drop-shadow(0px 0px 3px black);
	}
}

div.dt-buttons {
	> .dt-button,
	> div.dt-button-split .dt-button {
		position: relative;
		display: inline-block;
		box-sizing: border-box;
		margin-left: 0.167em;
		margin-right: 0.167em;
		padding: 0.5em 1em;
		cursor: pointer;
		font-size: 0.88em;
		line-height: 1.6em;
		white-space: nowrap;
		overflow: hidden;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
		text-decoration: none;
		text-overflow: ellipsis;
		border: var(--dtb-button_border);
		border-radius: var(--dtb-button_border-radius);
		box-shadow: var(--dtb-button_box-shadow);
		background: var(--dtb-button_background);
		color: var(--dtb-button_color);

		&:first-child {
			margin-left: 0;
		}

		&.disabled {
			cursor: default;
			opacity: 0.4;
		}

		&.dt-button-active:not(.disabled) {
			border: var(--dtb-button_border-active);
			border-radius: var(--dtb-button_border-radius-active);
			box-shadow: var(--dtb-button_box-shadow-active);
			background: var(--dtb-button_background-active);
			color: var(--dtb-button_color-active);

			&:hover:not(.disabled) {
				border: var(--dtb-button_border-active-hover);
				border-radius: var(--dtb-button_border-radius-active-hover);
				box-shadow: var(--dtb-button_box-shadow-active-hover);
				background: var(--dtb-button_background-active-hover);
				color: var(--dtb-button_color-active-hover);
			}
		}

		&:hover {
			text-decoration: none;
		}

		&:hover:not(.disabled) {
			border: var(--dtb-button_border-hover);
			border-radius: var(--dtb-button_border-radius-hover);
			box-shadow: var(--dtb-button_box-shadow-hover);
			background: var(--dtb-button_background-hover);
			color: var(--dtb-button_color-hover);
		}
		
		embed { 
			outline: none;
		}
	}

	> div.dt-button-split {
		.dt-button:first-child {
			border-right: 1px solid rgba(0, 0, 0, 0.15);
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;
	
			&:hover {
				border-right: 1px solid #666;
			}
		}
	
		.dt-button:last-child {
			border-left: 1px solid transparent; // Allows hover on border
			border-top-left-radius: 0;
			border-bottom-left-radius: 0;
	
			&:hover {
				border-left: 1px solid #666;
			}
		}
	}

	span.dt-button-down-arrow {
		position: relative;
		top: -2px;
		font-size: 10px;
		padding-left: 10px;
		line-height: 1em;
		opacity: 0.6;
	}

	div.dt-button-split {
		display: inline-block;

		.dt-button:first-child {
			margin-right: 0;
		}

		.dt-button:last-child {
			margin-left: -1px;
			padding-left: 0.75em;
			padding-right: 0.75em;
			z-index: 2;
			
			span {
				padding-left: 0;
			}
		}
	}
}


div.dt-button-collection {
	position: absolute;
	top: 0;
	left: 0;
	width: 200px;
	margin-top: 3px;
	margin-bottom: 3px;
	padding: 0.75em 0;
	border: var(--dtb-collection_border);
	background-color: var(--dtb-collection_background-color);
	overflow: hidden;
	z-index: 2002;
	border-radius: 5px;
	box-shadow: var(--dtb-collection_box-shadow);
	box-sizing: border-box;

	.dt-button {
		position: relative;
		left: 0;
		right: 0;
		width: 100%;

		display: flex;
		float: none;
		justify-content: space-between;
		align-items: center;

		background: none;
		margin: 0;
		padding: 0.5em 1em;
		border: none;
		text-align: left;
		cursor: pointer;
		color: inherit;

		&.dt-button-active {
			background: none;
			box-shadow: none;
		}

		&.disabled {
			cursor: default;
			opacity: 0.4;
		}

		&:hover:not(.disabled) {
			border: none;
			background: rgba(153, 153, 153, 0.1);
			box-shadow: none;
		}

		&:focus {
			outline-offset: -2px;
		}
	}

	div.dt-button-split {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: flex-start;
		align-content: flex-start;
		align-items: stretch;

		button.dt-button {
			margin: 0;
			display: inline-block;
			width: 0;
			flex-grow: 1;
			flex-shrink: 0;
			flex-basis: 50px;
		}

		button.dt-button-split-drop {
			min-width: 33px;
			flex: 0;
		}
	}

	&.fixed {
		.dt-button {
			border-radius: 0.25em;
			background: rgba(255, 255, 255, 0.1);
		}
	}

	@include mixins.dtb-fixed-collection();
}

div.dt-button-background {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;

	@include mixins.dtb-radial-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7) );

	z-index: 2001;
}

.dt-button.processing {
	@include mixins.dtb-processing();
}

@media screen and (max-width: 640px) {
	div.dt-buttons {
		float: none !important;
		text-align: center;
	}
}

html.dark {
	div.dt-buttons {
		> div.dt-button-split {
			.dt-button:first-child {
				border-right: 1px solid rgba(255, 255, 255, 0.1);
			}
		}
	}

	div.dt-button-info {
		background-color: var(--dt-html_background);
		border: 1px solid rgba(255, 255, 255, 0.15);
	}
}

